2010-02-02  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/amfetchdump.pl: only output a filename with a partnum
	  when -n was given

2010-02-02  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/ndmp-device.c: fix failure to check for fatal errors, use
	  signed 'delta'
	* device-src/tape-device.c: rewind correctly, even to the current file
	* device-src/vfs-device.c: set in_file=FALSE on finish()
	* installcheck/Amanda_Device.pl: check reading file header twice

2010-02-02  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/amtapetype.pl installcheck/Amanda_DB_Catalog.pl
	  installcheck/Amanda_Device.pl installcheck/Amanda_Recovery_Clerk.pl
	  installcheck/Amanda_Recovery_Planner.pl installcheck/Amanda_Xfer.pl
	  installcheck/amrestore.pl perl/Amanda/Recovery/Clerk.pm
	  perl/Amanda/Taper/Scribe.pm perl/Amanda/Xfer.pod server-src/amvault.pl
	  xfer-src/xfer-test.c: detect a finished xfer by XMSG_DONE, instead
	  of xfer_state == XFER_DONE

2010-02-02  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amanda-auth.7.xml: reduce circular references

2010-02-01  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Changer.pm: add a :constants tag, clean up POD

2010-01-31  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Never return SLOT_UNKNOWN.

2010-01-30  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Allow multiple scripts on one line.

2010-01-29 Dan Locks <dwlocks@zmanda.com>
	*  packaging/rpm/amanda.spec: move manpages to
	   defattr(644,root,root,..) section

2010-01-29  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/DB/Catalog.pm: inculde dumps on holding
	* installcheck/Amanda_DB_Catalog.pl: tests
	* perl/Amanda/Recovery/Planner.pm: plan for dumps on holding
	* installcheck/Amanda_Recovery_Planner.pl: tests
	* perl/Amanda/Recovery/Clerk.pm: recover from holding with
	  Amanda::Xfer::Source::Holding when appropriate
	* installcheck/Amanda_Recovery_Clerk.pl: tests